JS added, usable buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,3 +53,7 @@ footer a {
 footer a:hover {
     text-decoration: underline; /* Add underline back on hover */
 }
+/* --- Helper Classes --- */
+.hidden {
+    display: none;
+}
